# shadow-learn

./: .gitignore  CLAUDE.md  README.md  docker-compose.china.yml  docker-compose.offshore.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json
backend/: .env.example  Dockerfile  deepgram_paragraph_response.json  deepgram_utterances_response.json  gladia_utterances_response.json  pyproject.toml
backend/app/: config.py  job_store.py  jobs.py  main.py  models.py  settings.py
backend/app/agent/: router.py
backend/app/background/: router.py
backend/app/collection/: config.py  router.py  service.py
backend/app/config/: router.py
backend/app/daily_review/: router.py
backend/app/document_search/: router.py
backend/app/lessons/: router.py
backend/app/pageindex_tool/: router.py
backend/app/pronunciation/: router.py
backend/app/quiz/: router.py
backend/app/routers/: agent.py  chat.py  config.py  jobs.py  lessons.py  pronunciation.py  quiz.py  speak.py  translation_exercise.py  tts.py
backend/app/services/: _retry.py  audio.py  language_config.py  pinyin.py  romaji.py  romanization_provider.py  subtitle_segmenter.py  transcription.py  transcription_azure.py  transcription_deepgram.py  transcription_factory.py  transcription_gladia.py  transcription_provider.py  translation.py  tts.py  tts_azure.py  tts_factory.py  tts_minimax.py  tts_provider.py  validation.py  vocabulary.py
backend/app/shared/: _retry.py  utils.py
backend/app/speak/: __init__.py  _errors.py  _schemas_gemini.py  culture.py  generation.py  offshore_client.py  personas.py  proficiency.py  prompt_builder.py  router.py  situations.py  situations_data.json
backend/app/tips/: router.py  schemas.py
backend/app/transcription/: router.py
backend/app/translation/: router.py
backend/app/tts/: router.py
backend/app/vocab/: prompt.py  router.py
backend/livekit_agent/: .env.example  Dockerfile  _retry.py  agent.py  entrypoint.py  gemini_client.py  http_server.py  main.py  pyproject.toml  requirements.txt  schemas.py  userdata.py  utils.py
backend/livekit_agent/agents/: __init__.py  observer_agent.py  persona_agent.py
backend/livekit_agent/prompts/: __init__.py  ai_translation_prompt.yaml  (+5 more)
backend/scripts/: eval_breakdown_prompt.py  seed_situations.py
backend/tests/: conftest.py  test_agent_router.py  test_audio.py  test_blog_scraper.py  test_chat_router.py  test_chinese_normalizer.py  test_collection_router.py  test_collection_service.py  test_config_router.py  test_daily_review_router.py  test_external_playlist.py  test_job_store.py  test_jobs_router.py  test_lessons_router.py  test_pageindex_tool.py  test_pinyin.py  test_pronunciation_router.py  test_quiz_router.py  test_resolve_key.py  test_retry.py  test_romaji.py  test_romanization_provider.py  test_sanitize_tool_arguments.py  test_segmentation_provider.py  test_speak_culture.py  test_speak_generation.py  test_speak_offshore_client.py  test_speak_personas.py  test_speak_proficiency.py  test_speak_prompt_builder.py  test_speak_router.py  test_speak_situations.py  test_subtitle_segmenter.py  test_tips_studio_mind_map.py  test_tips_studio_prompt.py  test_tips_studio_router.py  test_tips_studio_router_mind_map.py  test_tips_studio_schemas.py  test_tips_studio_service.py  test_tips_transcript.py  (+17 more)
(+1044 files in other folders)
