[project]
name = "shadowlearn-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "yt-dlp[default]>=2025.05.22",
    "bgutil-ytdlp-pot-provider>=1.3.0",
    "ffmpeg-python>=0.2.0",
    "pypinyin>=0.53.0",
    "eng-to-ipa>=0.0.2",
    "httpx>=0.28.0",
    "openai==2.6.0",
    "pydantic-settings>=2.7.0",
    "sse-starlette>=2.2.0",
    "azure-cognitiveservices-speech>=1.40.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
