[project]
name = "livekit-agent"
version = "0.1.0"
description = "ShadowLearn Voice Agent for Speak with AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents>=1.4.0",
    "livekit-plugins-google>=1.0.0",
    "livekit-plugins-silero>=1.0.0",
    "livekit-plugins-noise-cancellation>=0.2.0",
    "python-dotenv>=1.0.0",
]
