[project]
name = "livekit-agent"
version = "0.2.0"
description = "ShadowLearn Voice Agent for Speak with AI (Multi-Agent)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents>=1.4.0",
    "livekit-plugins-openai>=1.0.0",
    "livekit-plugins-google>=1.0.0",
    "livekit-plugins-silero>=1.0.0",
    "livekit-plugins-noise-cancellation>=0.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
azure = [
    "azure-cognitiveservices-speech>=1.40.0",
]
